started projects fixed nav bar overlap bug

--- a/css-blocks/defaults.css
+++ b/css-blocks/defaults.css
@@ -12,6 +12,7 @@
     --logo-size-hover: 20pt;
     --nav-link-size: 16pt;
     --nav-link-size-hover: 20pt;
+    --header-size: 35pt;
 
     /*Timings*/
     --transition-fast: 0.25s;
