--- a/css-blocks/navigation-bar.css
+++ b/css-blocks/navigation-bar.css
@@ -6,6 +6,7 @@ header {
     position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 1000;
 }
 
 .navigation {
@@ -14,7 +15,6 @@ header {
     margin-top: 30px;
     gap: 35px; /*This is 35 instead of --grid-spacing bc there is a right-margin of 10px applied for the animation to look better*/
     height: 50px;
-    z-index: 3;
 }
 
 .navigation-link-container {
